--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # 必填：302 API 凭证
-API_URL="https://api.302.ai/ws/api/v3/google/nano-banana-pro/edit"
-API_KEY="sk-ca91lj3j7AI1iDyA74ilBLTHKnojMOOjKvn7SxRQY7NSe60P"
+API_URL="****"
+API_KEY="*****"
 
 # 可选：媒体文件保存目录（默认 ./media）
 MEDIA_ROOT="./media"
