--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,15 @@
 .idea/
 
 # 忽略Python字节码缓存
+# Python
 __pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Logs
+logs/
+
 
 # 忽略环境变量文件（.env）
 .env
@@ -17,3 +25,4 @@ venv/
 *.jpg
 *.jpeg
 *.webp
+
